Fix bug 110405.  Removing anachronistic assertion, added condition to respect STORE_ON_DISK policy.  Changed fav icon cache policy to STORE_ANYWHERE.  r/sr = darin, hyatt, sfraser.